--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,40 @@
 }
 
 .chat-container div {
-  border: 1px solid blue;
-  margin: 10px 10px 10px 10px;
+  margin: 5x 10px 5px 10px;
   padding: 10px;
 }
 
 .chat-log {
   flex: 1;
+  overflow-y: scroll;
 }
 
+.chat-message-input input {
+  font-size: 14px;
+  width: 100%;
+}
+
+.chat-username {
+  background-color: rgb(204,218,246);
+  border-radius:10px
+}
+
+.chat-log div {
+  background-color : rgb(238,204,205);
+  border-radius: 10px
+}
+
+.chat-message-input {
+  background-color: rgb(220,233,213);
+  border-radius: 10px
+}
+
+.chat-item {
+  margin: 10px 0 10px 0 !important
+}
+
+.chat-from-me {
+  text-align: right;
+  background-color: rgb(21, 86, 216) !important
+}
